Complete translations & mobile services sticky headers

--- a/index.html
+++ b/index.html
@@ -96,43 +96,50 @@
 
             <div class="problems-grid">
                 <div class="problem-card">
-                    <h3>Администраторы сливают половину заявок</h3>
-                    <p>Люди звонят, пишут — но не записываются. Проблема не в трафике, а в том, что происходит после
+                    <h3 data-i18n="problem1Title">Администраторы сливают половину заявок</h3>
+                    <p data-i18n="problem1Text">Люди звонят, пишут — но не записываются. Проблема не в трафике, а в том,
+                        что происходит после
                         звонка.</p>
                 </div>
 
                 <div class="problem-card">
-                    <h3>Летний провал убивает годовую прибыль</h3>
-                    <p>Июнь-август — врачи простаивают, кресла пустуют. Клиники без стратегии теряют 20-30% годового
+                    <h3 data-i18n="problem2Title">Летний провал убивает годовую прибыль</h3>
+                    <p data-i18n="problem2Text">Июнь-август — врачи простаивают, кресла пустуют. Клиники без стратегии
+                        теряют 20-30% годового
                         потенциала.</p>
                 </div>
 
                 <div class="problem-card">
-                    <h3>Нет репутации = нет доверия</h3>
-                    <p>Люди выбирают клинику в интернете ДО первого звонка. Если у вас мало отзывов на 2ГИС — они идут к
+                    <h3 data-i18n="problem3Title">Нет репутации = нет доверия</h3>
+                    <p data-i18n="problem3Text">Люди выбирают клинику в интернете ДО первого звонка. Если у вас мало
+                        отзывов на 2ГИС — они идут к
                         конкурентам.</p>
                 </div>
 
                 <div class="problem-card">
-                    <h3>Неявки съедают 5-10% прибыли</h3>
-                    <p>Каждое пустое кресло — это потерянные десятки тысяч рублей. Каждый месяц.</p>
+                    <h3 data-i18n="problem4Title">Неявки съедают 5-10% прибыли</h3>
+                    <p data-i18n="problem4Text">Каждое пустое кресло — это потерянные десятки тысяч рублей. Каждый
+                        месяц.</p>
                 </div>
 
                 <div class="problem-card">
-                    <h3>Вы работаете вслепую</h3>
-                    <p>Нет понимания: какие услуги приносят деньги, откуда приходят платёжеспособные пациенты, куда
+                    <h3 data-i18n="problem5Title">Вы работаете вслепую</h3>
+                    <p data-i18n="problem5Text">Нет понимания: какие услуги приносят деньги, откуда приходят
+                        платёжеспособные пациенты, куда
                         утекает бюджет.</p>
                 </div>
 
                 <div class="problem-card">
-                    <h3>Пациенты "одноразки"</h3>
-                    <p>Приходят лечить один зуб и исчезают. Вы тратите бюджет на привлечение, но упускаете прибыль от
+                    <h3 data-i18n="problem6Title">Пациенты "одноразки"</h3>
+                    <p data-i18n="problem6Text">Приходят лечить один зуб и исчезают. Вы тратите бюджет на привлечение,
+                        но упускаете прибыль от
                         комплексных планов.</p>
                 </div>
             </div>
 
             <div style="text-align: center; margin-top: 60px;">
-                <a href="https://t.me/sintez_agency" target="_blank" class="cta-button cta-button-secondary">Как мы это
+                <a href="https://t.me/sintez_agency" target="_blank" class="cta-button cta-button-secondary"
+                    data-i18n="problemsCTA">Как мы это
                     решаем</a>
             </div>
         </div>
