Feat: Add M Revenue Case Study with Chart

--- a/index.html
+++ b/index.html
@@ -426,14 +426,71 @@
     <!-- Case Study -->
     <section id="case" class="section-dark">
         <div class="container">
-            <h2>Кейс: стоматология "Престиж"</h2>
+            <!-- New $1M Revenue Header -->
+            <div class="case-million-header">
+                <div class="case-million-title" data-i18n="caseMillionTitle">
+                    Мы заработали для клиники<br>
+                    <span class="case-million-highlight">более $1,000,000</span>
+                </div>
+
+                <div class="case-badges">
+                    <div class="case-badge" data-i18n="caseMillionBadge1"><i class="fas fa-users"></i> Командная работа</div>
+                    <div class="case-badge" data-i18n="caseMillionBadge2"><i class="fas fa-chair"></i> 4 кресла</div>
+                    <div class="case-badge" data-i18n="caseMillionBadge3"><i class="fas fa-city"></i> Магнитогорск (450 тыс.)</div>
+                </div>
+
+                <p style="font-size: 18px; color: var(--text-muted); max-width: 600px;" data-i18n="caseMillionDesc">
+                    Это стало возможно исключительно благодаря синергии: сильный продукт клиники + наша цифровая экосистема.
+                </p>
+            </div>
 
             <div class="case-study">
-                <div class="case-header">
-                    <h3 data-i18n="caseHeaderTitle">От сарафанного радио до лидера города за 2 года</h3>
-                    <p style="font-size: 18px; color: var(--text-muted);" data-i18n="caseHeaderSubtitle">Новый владелец
-                        купил клинику в Магнитогорске и
-                        обнаружил полное отсутствие системы</p>
+                
+                <!-- Growth Chart -->
+                <div class="growth-chart-container">
+                    <div class="chart-glow"></div> <!-- Ambient Glow -->
+                    <div class="growth-header-row">
+                        <h3 class="growth-title" data-i18n="caseChartTitle">Траектория роста (выручка)</h3>
+                    </div>
+
+                    <div class="chart-bars">
+                        <!-- 2020: 25M (Base ~29%) -->
+                        <div class="bar-item">
+                            <div class="bar-value">25M ₽</div>
+                            <div class="bar-fill" style="height: 29%"></div>
+                            <div class="bar-year">2020</div>
+                        </div>
+                        <!-- 2021: 37M (~43%) -->
+                        <div class="bar-item">
+                            <div class="bar-value">37M ₽</div>
+                            <div class="bar-fill" style="height: 43%"></div>
+                            <div class="bar-year">2021</div>
+                        </div>
+                        <!-- 2022: 78M (~91%) -->
+                        <div class="bar-item">
+                            <div class="bar-value">78M ₽</div>
+                            <div class="bar-fill" style="height: 91%"></div>
+                            <div class="bar-year">2022</div>
+                        </div>
+                        <!-- 2023: 67M (~78% - dip) -->
+                        <div class="bar-item">
+                            <div class="bar-value">67M ₽</div>
+                            <div class="bar-fill" style="height: 78%"></div>
+                            <div class="bar-year">2023</div>
+                        </div>
+                        <!-- 2024: 81M (~95%) -->
+                        <div class="bar-item">
+                            <div class="bar-value">81M ₽</div>
+                            <div class="bar-fill" style="height: 95%"></div>
+                            <div class="bar-year">2024</div>
+                        </div>
+                        <!-- 2025: 85M (100% - projected/current) -->
+                        <div class="bar-item">
+                            <div class="bar-value">85M ₽</div>
+                            <div class="bar-fill" style="height: 100%"></div>
+                            <div class="bar-year">2025</div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="case-timeline">
