Update chart with precise RUB figures

--- a/index.html
+++ b/index.html
@@ -434,18 +434,21 @@
                 </div>
 
                 <div class="case-badges">
-                    <div class="case-badge" data-i18n="caseMillionBadge1"><i class="fas fa-users"></i> Командная работа</div>
+                    <div class="case-badge" data-i18n="caseMillionBadge1"><i class="fas fa-users"></i> Командная работа
+                    </div>
                     <div class="case-badge" data-i18n="caseMillionBadge2"><i class="fas fa-chair"></i> 4 кресла</div>
-                    <div class="case-badge" data-i18n="caseMillionBadge3"><i class="fas fa-city"></i> Магнитогорск (450 тыс.)</div>
+                    <div class="case-badge" data-i18n="caseMillionBadge3"><i class="fas fa-city"></i> Магнитогорск (450
+                        тыс.)</div>
                 </div>
 
                 <p style="font-size: 18px; color: var(--text-muted); max-width: 600px;" data-i18n="caseMillionDesc">
-                    Это стало возможно исключительно благодаря синергии: сильный продукт клиники + наша цифровая экосистема.
+                    Это стало возможно исключительно благодаря синергии: сильный продукт клиники + наша цифровая
+                    экосистема.
                 </p>
             </div>
 
             <div class="case-study">
-                
+
                 <!-- Growth Chart -->
                 <div class="growth-chart-container">
                     <div class="chart-glow"></div> <!-- Ambient Glow -->
@@ -454,39 +457,33 @@
                     </div>
 
                     <div class="chart-bars">
-                        <!-- 2020: 25M (Base ~29%) -->
+                        <!-- 2020: 25.5M (Base ~30%) -->
                         <div class="bar-item">
-                            <div class="bar-value">25M ₽</div>
-                            <div class="bar-fill" style="height: 29%"></div>
+                            <div class="bar-value">25.5M ₽</div>
+                            <div class="bar-fill" style="height: 30%"></div>
                             <div class="bar-year">2020</div>
                         </div>
-                        <!-- 2021: 37M (~43%) -->
+                        <!-- 2021: 37.6M (~44%) -->
                         <div class="bar-item">
-                            <div class="bar-value">37M ₽</div>
-                            <div class="bar-fill" style="height: 43%"></div>
+                            <div class="bar-value">37.6M ₽</div>
+                            <div class="bar-fill" style="height: 44%"></div>
                             <div class="bar-year">2021</div>
                         </div>
-                        <!-- 2022: 78M (~91%) -->
+                        <!-- 2023: 67.3M (~78%) -->
                         <div class="bar-item">
-                            <div class="bar-value">78M ₽</div>
-                            <div class="bar-fill" style="height: 91%"></div>
-                            <div class="bar-year">2022</div>
-                        </div>
-                        <!-- 2023: 67M (~78% - dip) -->
-                        <div class="bar-item">
-                            <div class="bar-value">67M ₽</div>
+                            <div class="bar-value">67.3M ₽</div>
                             <div class="bar-fill" style="height: 78%"></div>
                             <div class="bar-year">2023</div>
                         </div>
-                        <!-- 2024: 81M (~95%) -->
+                        <!-- 2024: 80.9M (~94%) -->
                         <div class="bar-item">
-                            <div class="bar-value">81M ₽</div>
-                            <div class="bar-fill" style="height: 95%"></div>
+                            <div class="bar-value">80.9M ₽</div>
+                            <div class="bar-fill" style="height: 94%"></div>
                             <div class="bar-year">2024</div>
                         </div>
-                        <!-- 2025: 85M (100% - projected/current) -->
+                        <!-- 2025: 85.4M (100% - projected/current) -->
                         <div class="bar-item">
-                            <div class="bar-value">85M ₽</div>
+                            <div class="bar-value">85.4M ₽</div>
                             <div class="bar-fill" style="height: 100%"></div>
                             <div class="bar-year">2025</div>
                         </div>
