Update chart: Add 2022 data with 61.7M RUB

--- a/index.html
+++ b/index.html
@@ -469,6 +469,12 @@
                             <div class="bar-fill" style="height: 44%"></div>
                             <div class="bar-year">2021</div>
                         </div>
+                        <!-- 2022: 61.7M (~72%) -->
+                        <div class="bar-item">
+                            <div class="bar-value">61.7M ₽</div>
+                            <div class="bar-fill" style="height: 72%"></div>
+                            <div class="bar-year">2022</div>
+                        </div>
                         <!-- 2023: 67.3M (~78%) -->
                         <div class="bar-item">
                             <div class="bar-value">67.3M ₽</div>
